# bp-cli

./: Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  constant.rs  main.rs  utils.rs
crates/cli/src/command/: auto.rs  info.rs  mod.rs
crates/cli/src/command/authenticated/: capital.rs  history.rs  mod.rs  order.rs
crates/cli/src/command/public/: markets.rs  mod.rs  system.rs  trades.rs
crates/client/: Cargo.toml
crates/client/src/: capital.rs  lib.rs  markets.rs  order.rs  system.rs  trades.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs  markets.rs  system.rs  trade.rs
