[package]
name = "bp-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bpx-api-client = { path = "../client" }
dirs = "5.0.1"
env_logger = "0.11.1"
log = "0.4.20"
serde = "1.0.196"
structopt = "0.3.26"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.8"
